# prudynt-t

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  build-all.sh  build-local.sh  build.sh  buildroot_dev.sh  prudynt.cfg.example
.github/workflows/: pru.yaml
.trunk/: actions  logs  notifications  out  tools
blob/include/imp/: imp_common.h  imp_decoder.h  imp_dmic.h  imp_encoder.h  imp_framesource.h  imp_isp.h  imp_ivs.h  imp_ivs_move.h  imp_log.h  imp_osd.h  imp_system.h
include/: thingino_logo.h
include/T20/imp/: imp_audio.h  imp_ivs.h  imp_ivs_move.h
include/T21/imp/: imp_audio.h  imp_osd.h
include/T23/imp/: imp_audio.h  imp_common.h  imp_decoder.h  imp_encoder.h  imp_framesource.h  imp_isp.h  imp_ivs.h  imp_ivs_base_move.h  imp_ivs_move.h  imp_osd.h  imp_system.h  isp_osd.h
include/T30/imp/: imp_audio.h
include/T31/imp/: imp_osd.h
include/T40/imp/: imp_audio.h  imp_common.h  imp_dmic.h  imp_encoder.h  imp_framesource.h  imp_isp.h  imp_osd.h
include/T40/sysutils/: su_adc.h
include/T41/imp/: imp_audio.h  imp_common.h  imp_decoder.h  imp_dmic.h  imp_emu_framesource.h  imp_encoder.h  imp_framesource.h  imp_isp.h  imp_ivs.h  imp_ivs_base_move.h  imp_osd.h  imp_system.h  imp_utils.h  isp_osd.h
include/T41/sysutils/: su_adc.h  su_base.h  su_cipher.h
include/imp_t21/: imp_encoder.h  imp_isp.h
include/imp_t30/: imp_audio.h  imp_dmic.h  imp_isp.h
include/imp_t31/: imp_audio.h  imp_encoder.h
include/sysutils/: su_base.h  su_cipher.h  su_misc.h
res/: config.wyze  config.wyze-static  libhelix-aac.patch  live555-config.prudynt  live555-config.prudynt-static  live555-prudynt.patch
scripts/: Encoder.cpp  Encoder.hpp  make_libhelixaac_deps.sh  make_libwebsockets_deps.sh  make_opus_deps.sh
src/: AACEncoder.cpp  AACEncoder.hpp  AACSink.cpp  AACSink.hpp  AudioReframer.cpp  AudioReframer.hpp  AudioWorker.cpp  AudioWorker.hpp  BackchannelProcessor.cpp  BackchannelProcessor.hpp  BackchannelServerMediaSubsession.cpp  BackchannelServerMediaSubsession.hpp  BackchannelSink.cpp  BackchannelSink.hpp  BackchannelStreamState.cpp  BackchannelStreamState.hpp  BackchannelWorker.cpp  BackchannelWorker.hpp  CMakeLists.txt  CVR.cpp  CVR.hpp  Config.cpp  Config.hpp  ConfigWatcher.cpp  ConfigWatcher.hpp  Encoder.cpp  Encoder.hpp  GPIO.cpp  GPIO.hpp  IMP.cpp  IMP.hpp  IMPAudio.cpp  IMPAudio.hpp  IMPAudioDeviceSource.cpp  IMPAudioDeviceSource.hpp  IMPAudioServerMediaSubsession.cpp  IMPAudioServerMediaSubsession.hpp  IMPBackchannel.cpp  IMPBackchannel.hpp  IMPDeviceSource.cpp  (+54 more)
